@@ -1,5 +1,3 @@
-# $Id: Makefile.PL,v 1.4 2008-09-03 16:32:37 cantrelld Exp $
-
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
